--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TwitterClient</string>
     <string name="login.error.message">Login Error %s</string>
+    <string name="main.header.images">Images</string>
+    <string name="main.header.hastags">Hashtags</string>
+    <string name="main.menu.action.logout">Logout</string>
 </resources>
